# open-brain

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docs.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: router.py
app/api/routes/: health.py  memories.py  search.py
app/core/: config.py  errors.py  request_context.py  security.py
app/db/: models.py  session.py
app/mcp/: server.py  stdio_bridge.py
app/schemas/: memory.py
app/services/: embedding.py  entities.py  memory_service.py  retrieval.py
db_migrations/: env.py
db_migrations/versions/: 20260317_000001_initial_schema.py
scripts/: init_db.py
tests/: test_api_auth.py  test_embedding.py  test_health.py  test_mcp.py  test_memory_service.py  test_schemas.py  test_security.py
